--- a/.github/workflows/property-based-tests.yml
+++ b/.github/workflows/property-based-tests.yml
@@ -32,20 +32,17 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Setup Virtual Env
-      run: |
-        python -m venv venv
-        echo "$GITHUB_WORKSPACE/venv/bin" >> $GITHUB_PATH
-
     - name: Install dependencies
       run: |
+        pip install uv
         uv sync --no-install-project
+        echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
     - uses: oven-sh/setup-bun@v2
       with:
         bun-version: latest
     - name: Build Rust Library
       run: |
-        source activate
+        source .venv/bin/activate
         maturin develop --release
 
     - name: Run Hypothesis property based tests
