--- a/.github/workflows/ray-compatibility.yml
+++ b/.github/workflows/ray-compatibility.yml
@@ -36,13 +36,11 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Setup Virtual Env
+    - name: Install dependencies
       run: |
-        python -m venv venv
-        echo "$GITHUB_WORKSPACE/venv/bin" >> $GITHUB_PATH
-
-    - name: Install uv
-      run: pip install uv
+        pip install uv
+        uv sync --no-install-project
+        echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
 
     - name: Install to pin Ray versions
       run: uv pip install ray[data,default]==${{ matrix.ray-version }}
@@ -52,13 +50,11 @@ jobs:
       if: ${{ matrix.ray-version == '1.12.0' || matrix.ray-version == '1.11.0' || matrix.ray-version == '1.10.0' }}
       run: uv pip install protobuf==3.20.3
 
-    - name: Install dependencies
-      run: |
-        uv sync --no-install-project
+
 
     - name: Build Rust Library
       run: |
-        source activate
+        source .venv/bin/activate
         maturin develop
 
     - name: Test with pytest
