Fix venv paths and dependency configurations

--- a/.github/workflows/nightly-publish-s3.yml
+++ b/.github/workflows/nightly-publish-s3.yml
@@ -138,7 +138,7 @@ jobs:
     - name: Setup Virtual Env
       run: |
         uv venv venv
-        echo "$GITHUB_WORKSPACE/venv/bin" >> $GITHUB_PATH
+        echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
 
     - name: Install Daft and dev dependencies
       run: |
@@ -211,7 +211,7 @@ jobs:
     - name: Setup Virtual Env
       run: |
         uv venv venv
-        echo "$GITHUB_WORKSPACE/venv/bin" >> $GITHUB_PATH
+        echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
     - name: Install Daft and dev dependencies
       run: |
         uv sync --no-install-project
