--- a/src/daft-functions/Cargo.toml
+++ b/src/daft-functions/Cargo.toml
@@ -13,6 +13,7 @@ flate2 = {version = "1.1", features = ["zlib-rs"], default-features = false}
 futures = {workspace = true}
 paste = "1.0.15"
 pyo3 = {workspace = true, optional = true}
+simdutf8 = "0.1.5"
 tiktoken-rs = {workspace = true}
 tokio = {workspace = true}
 typetag = {workspace = true}
