--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -85,13 +85,15 @@ azure-storage-blob==12.24.0
 gcsfs==2023.12.0
 
 # Documentation
-myst-nb>=0.16.0
-Sphinx==5.3.0
-sphinx-book-theme==1.1.0
-sphinx-reredirects>=0.1.1
-sphinx-copybutton>=0.5.2
-sphinx-autosummary-accessors==2023.4.0
-sphinx-tabs==3.4.5
+markdown-exec
+mkdocs-jupyter
+mkdocs-material
+mkdocs-macros-plugin
+mkdocs-simple-hooks
+pymdown-extensions
+mkdocs-material[imaging]
+mkdocstrings-python
+ruff # for mkdocstring formatting
 
 # Daft connect testing
 pyspark==3.5.3
