--- a/src/daft-connect/Cargo.toml
+++ b/src/daft-connect/Cargo.toml
@@ -11,6 +11,7 @@ daft-context = {workspace = true, optional = true, features = ["python"]}
 daft-core = {workspace = true, optional = true, features = ["python"]}
 daft-dsl = {workspace = true, optional = true, features = ["python"]}
 daft-functions = {workspace = true, optional = true, features = ["python"]}
+daft-io = {workspace = true, optional = true, features = ["python"]}
 daft-logical-plan = {workspace = true, optional = true, features = ["python"]}
 daft-micropartition = {workspace = true, optional = true, features = [
   "python"
@@ -39,6 +40,7 @@ python = [
   "dep:common-file-formats",
   "dep:daft-core",
   "dep:daft-dsl",
+  "dep:daft-io",
   "dep:daft-logical-plan",
   "dep:daft-micropartition",
   "dep:daft-scan",
