--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -94,6 +94,7 @@ pymdown-extensions
 mkdocs-material[imaging]
 mkdocstrings-python
 ruff # for mkdocstring formatting
+mkdocs-minify-plugin
 
 # Daft connect testing
 pyspark==3.5.3
