disable formatters for test_show

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
   hooks:
   - id: detect-private-key
   - id: trailing-whitespace
-    exclude: (?x)^(docs/source/api_docs/|tests/assets/mvp.csv|.*\.warc)$
+    exclude: (?x)^(docs/source/api_docs/|tests/assets/mvp.csv|.*\.warc|tests/dataframe/test_show.py)$
   - id: end-of-file-fixer
     exclude: |
       (?x)^(
