async shuffle cache

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,7 +62,6 @@ python = [
   "common-scan-info/python",
   "common-system-info/python",
   "daft-catalog/python",
-  "daft-cli/python",
   "daft-connect/python",
   "daft-context/python",
   "daft-core/python",
@@ -184,8 +183,7 @@ members = [
   "src/daft-writers",
   "src/hyperloglog",
   "src/parquet2",
-  "src/generated/spark-connect",
-  "src/daft-cli"
+  "src/generated/spark-connect"
 ]
 
 [workspace.dependencies]
