--- a/src/daft-shuffles/Cargo.toml
+++ b/src/daft-shuffles/Cargo.toml
@@ -1,4 +1,5 @@
 [dependencies]
+async-channel = "2.3.1"
 common-error = {path = "../common/error", default-features = false}
 common-runtime = {path = "../common/runtime", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
@@ -9,6 +10,7 @@ daft-schema = {path = "../daft-schema", default-features = false}
 daft-writers = {path = "../daft-writers", default-features = false}
 futures = {workspace = true}
 pyo3 = {workspace = true, optional = true}
+pyo3-async-runtimes = {version = "0.23", features = ["attributes", "tokio-runtime"]}
 tokio = {workspace = true}
 
 [features]
