--- a/src/daft-shuffles/Cargo.toml
+++ b/src/daft-shuffles/Cargo.toml
@@ -10,12 +10,13 @@ daft-schema = {path = "../daft-schema", default-features = false}
 daft-writers = {path = "../daft-writers", default-features = false}
 futures = {workspace = true}
 pyo3 = {workspace = true, optional = true}
-pyo3-async-runtimes = {version = "0.23", features = ["attributes", "tokio-runtime"]}
+pyo3-async-runtimes = {version = "0.23", features = ["attributes", "tokio-runtime"], optional = true}
 tokio = {workspace = true}
 
 [features]
 python = [
   "dep:pyo3",
+  "dep:pyo3-async-runtimes",
   "common-error/python",
   "daft-dsl/python",
   "daft-io/python",
