--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -814,7 +814,6 @@ jobs:
     continue-on-error: true
     env:
       python-version: '3.10'
-      DAFT_BOLD_TABLE_HEADERS: '0'
     steps:
     - uses: actions/checkout@v4
     - uses: moonrepo/setup-rust@v1
@@ -844,9 +843,10 @@ jobs:
       run: |
         source activate
         maturin develop
-        pytest --doctest-modules --continue-on-collection-errors daft/dataframe/dataframe.py daft/expressions/expressions.py daft/convert.py daft/udf.py daft/functions/functions.py
+        DAFT_BOLD_TABLE_HEADERS=0 pytest --doctest-modules --continue-on-collection-errors daft/dataframe/dataframe.py daft/expressions/expressions.py daft/convert.py daft/udf.py daft/functions/functions.py
       env:
-        DAFT_RUNNER: py
+        DAFT_RUNNER: native
+
 
   publish-coverage-reports:
     name: Publish coverage reports to CodeCov
