--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -841,9 +841,7 @@ jobs:
         uv pip install -r requirements-dev.txt
     - name: Run doctests
       run: |
-        source activate
-        maturin develop
-        DAFT_BOLD_TABLE_HEADERS=0 pytest --doctest-modules --continue-on-collection-errors daft/dataframe/dataframe.py daft/expressions/expressions.py daft/convert.py daft/udf.py daft/functions/functions.py
+        make doctests
       env:
         DAFT_RUNNER: native
 
