--- a/src/daft-connect/Cargo.toml
+++ b/src/daft-connect/Cargo.toml
@@ -13,7 +13,6 @@ daft-context = {workspace = true, optional = true, features = ["python"]}
 daft-core = {workspace = true, optional = true, features = ["python"]}
 daft-dsl = {workspace = true, optional = true, features = ["python"]}
 daft-functions = {workspace = true, optional = true, features = ["python"]}
-daft-io = {path = "../daft-io", optional = true, features = ["python"]}
 daft-logical-plan = {workspace = true, optional = true, features = ["python"]}
 daft-micropartition = {workspace = true, optional = true, features = [
   "python"
@@ -32,7 +31,7 @@ pyo3 = {workspace = true, optional = true}
 spark-connect = {workspace = true}
 textwrap = "0.16.1"
 tokio = {version = "1.40.0", features = ["full"]}
-tonic = {workspace = true}
+tonic = "0.12.3"
 tracing = {workspace = true}
 uuid = {version = "1.10.0", features = ["v4"]}
 snafu.workspace = true
@@ -44,7 +43,6 @@ python = [
   "dep:common-file-formats",
   "dep:daft-core",
   "dep:daft-dsl",
-  "dep:daft-io",
   "dep:daft-logical-plan",
   "dep:daft-micropartition",
   "dep:daft-scan",
