feat: adds case-insensitive identifiers [1/3]

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -29,6 +29,7 @@ nav:
       - SHOW: sql/statements/show.md
       - USE: sql/statements/use.md
     - Data Types: sql/datatypes.md
+    - Identifiers: sql/identifiers.md
   - Sessions: sessions.md
   - Catalogs: catalogs.md
   - Spark Connect: spark_connect.md
