testing remove pre-build readthedocs yml

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,9 +5,9 @@ build:
   tools:
     python: '3.10'
     rust: '1.64'
-  jobs:
-    pre_build:
-    - VIRTUAL_ENV=${READTHEDOCS_VIRTUALENV_PATH} make VENV=${READTHEDOCS_VIRTUALENV_PATH} build
+  # jobs:
+  #   pre_build:
+  #   - VIRTUAL_ENV=${READTHEDOCS_VIRTUALENV_PATH} make VENV=${READTHEDOCS_VIRTUALENV_PATH} build
 
 python:
   install:
