perf: Optimize shuffle cache (#4101)
## Changes Made

Expose an async shuffle cache to python, remove use of python threadpool
in the shuffle actor, spawn partitioner tasks that connect directly to
writer tasks.

### How it works:

Flight shuffle works by first partitioning and saving all outputs of the
map pipeline to disk in arrow IPC stream format, then reading the files
back and sending them to the reducer via arrow flight rpc.

We use actor per nodes to do the partitioning and saving. Each actor has
a `ShuffleCache` in rust which is responsible for partitioning and
saving. Previously, we use python threads via python's concurrent
threadpool executor to concurrently push partitions into the cache,
which allows us to do partitioning in parallel. But, we shouldn't need
to use a python threadpool, and instead be able to use the tokio
runtimes in rust to do this. This reduces reliance on python, reduces
number of threads, and will provide a smoother transition to using
swordfish with the shuffle cache.

To do this, we spawn `num_cpu` partitioner tasks and `num_partition`
writer tasks on a single threaded runtime, the tasks then spawn compute
on the compute runtime when needed. This is also how swordfish works. We
then use https://docs.rs/pyo3-async-runtimes/latest/pyo3_async_runtimes/
to expose an async bridge to python. Since ray has async actors, this
makes it easy to use async in python as well.

### Results:

Question | Before (s) | After (s) | Difference (s) | % Change
-- | -- | -- | -- | --
Q1 | 31.73 | 26.63 | -5.10 | -16.07%
Q2 | 36.40 | 31.26 | -5.14 | -14.12%
Q3 | 40.50 | 39.58 | -0.92 | -2.27%
Q4 | 27.58 | 22.90 | -4.68 | -16.97%
Q5 | 64.22 | 63.06 | -1.16 | -1.81%
Q6 | 9.77 | 9.55 | -0.22 | -2.25%
Q7 | 44.56 | 45.43 | 0.87 | 1.95%
Q8 | 96.06 | 96.61 | 0.55 | 0.57%
Q9 | 120.09 | 117.40 | -2.69 | -2.24%
Q10 | 36.68 | 37.49 | 0.81 | 2.21%
Q11 | 29.91 | 33.55 | 3.64 | 12.17%
Q12 | 25.21 | 25.51 | 0.30 | 1.19%
Q13 | 36.05 | 33.92 | -2.13 | -5.91%
Q14 | 17.68 

--- a/src/daft-shuffles/Cargo.toml
+++ b/src/daft-shuffles/Cargo.toml
@@ -2,6 +2,7 @@
 arrow-flight = "54.0.0"
 arrow-ipc = "54.2.1"
 arrow2 = {workspace = true, features = ["io_flight", "io_ipc_read_async"]}
+async-channel = "2.3.1"
 common-error = {path = "../common/error", default-features = false}
 common-runtime = {path = "../common/runtime", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
@@ -12,12 +13,14 @@ daft-schema = {path = "../daft-schema", default-features = false}
 daft-writers = {path = "../daft-writers", default-features = false}
 futures = {workspace = true}
 pyo3 = {workspace = true, optional = true}
+pyo3-async-runtimes = {version = "0.23", features = ["attributes", "tokio-runtime"], optional = true}
 tokio = {workspace = true}
 tonic = {workspace = true}
 
 [features]
 python = [
   "dep:pyo3",
+  "dep:pyo3-async-runtimes",
   "common-error/python",
   "daft-dsl/python",
   "daft-io/python",
