--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
   hooks:
   - id: mypy
     additional_dependencies: [types-requests, types-PyYAML, types-tabulate]
-    files: daft, daft_dashboard
+    files: daft
     exclude: daft/pickle/.*\.py
 
 - repo: https://github.com/pre-commit/pre-commit-hooks
