--- a/src/common/scan-info/Cargo.toml
+++ b/src/common/scan-info/Cargo.toml
@@ -6,8 +6,11 @@ common-file-formats = {path = "../file-formats", default-features = false}
 daft-algebra = {path = "../../daft-algebra", default-features = false}
 daft-dsl = {path = "../../daft-dsl", default-features = false}
 daft-schema = {path = "../../daft-schema", default-features = false}
+futures = {workspace = true}
 pyo3 = {workspace = true, optional = true}
 serde = {workspace = true}
+tokio = {workspace = true}
+tokio-stream = {workspace = true}
 typetag = {workspace = true}
 
 [features]
