Update bug_report.yml to use native runner

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -28,7 +28,7 @@ body:
     options:
     - Expressions
     - SQL
-    - Python Runner
+    - Native Runner
     - Ray Runner
     - Parquet
     - CSV
