--- a/src/daft-local-plan/Cargo.toml
+++ b/src/daft-local-plan/Cargo.toml
@@ -2,17 +2,23 @@
 common-error = {path = "../common/error", default-features = false}
 common-resource-request = {path = "../common/resource-request", default-features = false}
 common-scan-info = {path = "../common/scan-info", default-features = false}
+common-py-serde = {path = "../common/py-serde", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
 daft-logical-plan = {path = "../daft-logical-plan", default-features = false}
 log = {workspace = true}
 strum = {version = "0.26", features = ["derive"]}
+serde = {workspace = true}
+tokio = {workspace = true}
+pyo3 = {workspace = true, optional = true}
 
 [features]
 python = [
+  "dep:pyo3",
   "common-error/python",
   "common-resource-request/python",
   "common-scan-info/python",
+  "common-py-serde/python",
   "daft-core/python",
   "daft-dsl/python",
   "daft-logical-plan/python"
