use async channel

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -190,6 +190,7 @@ members = [
 
 [workspace.dependencies]
 approx = "0.5.1"
+async-channel = "2.3.1"
 async-compat = "0.2.3"
 async-compression = {version = "0.4.12", features = [
   "tokio",
