--- a/src/daft-local-execution/Cargo.toml
+++ b/src/daft-local-execution/Cargo.toml
@@ -1,4 +1,5 @@
 [dependencies]
+async-channel = {workspace = true}
 async-trait = {workspace = true}
 common-daft-config = {path = "../common/daft-config", default-features = false}
 common-display = {path = "../common/display", default-features = false}
@@ -27,7 +28,6 @@ futures = {workspace = true}
 indexmap = {workspace = true}
 indicatif = "0.17.9"
 itertools = {workspace = true}
-kanal = "0.1"
 log = {workspace = true}
 num-format = {workspace = true}
 pin-project = "1"
