--- a/src/daft-shuffles/Cargo.toml
+++ b/src/daft-shuffles/Cargo.toml
@@ -2,7 +2,7 @@
 arrow-flight = "54.0.0"
 arrow-ipc = "54.2.1"
 arrow2 = {workspace = true, features = ["io_flight", "io_ipc_read_async"]}
-async-channel = "2.3.1"
+async-channel = {workspace = true}
 common-error = {path = "../common/error", default-features = false}
 common-runtime = {path = "../common/runtime", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
