--- a/src/daft-session/Cargo.toml
+++ b/src/daft-session/Cargo.toml
@@ -1,6 +1,7 @@
 [dependencies]
 daft-catalog = {path = "../daft-catalog"}
 daft-core = {path = "../daft-core", default-features = false}
+daft-dsl = {path = "../daft-dsl"}
 daft-logical-plan = {path = "../daft-logical-plan"}
 pyo3 = {workspace = true, optional = true}
 uuid = {version = "1.10.0", features = ["v4"]}
