ci: fix vllm import on arm and skip test if not imported

--- a/.github/workflows/nightly-publish-s3.yml
+++ b/.github/workflows/nightly-publish-s3.yml
@@ -121,7 +121,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runner-name: [ubuntu-latest, buildjet-8vcpu-ubuntu-2204-arm]
+        runner-name: [ubuntu-latest, ubuntu-24.04-arm]
         daft-runner: [py, ray]
     steps:
     - uses: actions/checkout@v4
@@ -185,7 +185,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runner-name: [ubuntu-latest, buildjet-8vcpu-ubuntu-2204-arm]
+        runner-name: [ubuntu-latest, ubuntu-24.04-arm]
         daft-runner: [py, ray]
     # These permissions are needed to interact with GitHub's OIDC Token endpoint.
     # This is used in the step "Assume GitHub Actions AWS Credentials"
