--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -100,4 +100,4 @@ grpcio==1.68.1
 grpcio-status==1.67.0
 
 # ai
-vllm; platform_system == "Linux" # for other systems, see install instructions: https://docs.vllm.ai/en/latest/getting_started/installation.html
+vllm; platform_system == "Linux" and platform_machine == "x86_64" # for other systems, see install instructions: https://docs.vllm.ai/en/latest/getting_started/installation.html
