--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -76,7 +76,7 @@ s3fs==2023.12.0
 # "ImportError: cannot import name 'DEFAULT_CIPHERS' from 'urllib3.util.ssl_'"
 boto3==1.36.20
 boto3-stubs[essential,s3,s3tables]==1.36.20
-moto[s3,server]==5.1.1
+moto[s3,s3tables,glue,server]==5.1.1
 
 # Azure
 adlfs==2024.7.0
