--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -21,14 +21,14 @@ jobs:
 
   unit-tests-with-coverage:
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 30
+    timeout-minutes: 45
     strategy:
       fail-fast: false
       matrix:
         python-version: ['3.9', '3.10']
         daft-runner: [py, ray, native]
         pyarrow-version: [8.0.0, 16.0.0]
-        os: [ubuntu-20.04, windows-latest]
+        os: [ubuntu-latest, macos-latest]
         enable-aqe: [1, 0]
         exclude:
         - daft-runner: py
@@ -37,21 +37,15 @@ jobs:
           enable-aqe: 1
         - daft-runner: ray
           pyarrow-version: 8.0.0
-          os: ubuntu-20.04
+          os: ubuntu-latest
         - daft-runner: py
           python-version: '3.10'
           pyarrow-version: 8.0.0
-          os: ubuntu-20.04
+          os: ubuntu-latest
         - daft-runner: native
           python-version: '3.10'
           pyarrow-version: 8.0.0
-          os: ubuntu-20.04
-        - python-version: '3.9'
-          pyarrow-version: 16.0.0
-        - os: windows-latest
-          python-version: '3.9'
-        - os: windows-latest
-          pyarrow-version: 8.0.0
+          os: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - uses: moonrepo/setup-rust@v1
@@ -83,30 +77,39 @@ jobs:
         pip install uv
 
     - name: Install dependencies
-      if: ${{ (runner.os != 'Windows') }}
       run: |
         activate
         uv pip install -r requirements-dev.txt
 
-    - name: Install dependencies (Windows)
-      if: ${{ (runner.os == 'Windows') }}
-      run: |
-        .\venv\Scripts\activate
-        uv pip install -r requirements-dev.txt
-
     - name: Override pyarrow
-      if: ${{ (matrix.pyarrow-version) && (runner.os != 'Windows') }}
       run: uv pip install pyarrow==${{ matrix.pyarrow-version }}
 
     - name: Override deltalake for pyarrow
       if: ${{ (matrix.pyarrow-version == '8.0.0') }}
       run: uv pip install deltalake==0.10.0
 
-    - name: Build library and Test with pytest (unix)
-      if: ${{ (runner.os != 'Windows') }}
+    # Rust code coverage does not work on ubuntu-latest, so we only run it on macOS
+    # For more info: https://github.com/Eventual-Inc/Daft/issues/3801
+    - name: Build library and Test with pytest (Linux)
+      if: ${{ (runner.os == 'Linux') }}
       run: |
         source activate
-        export CARGO_TARGET_DIR=$CARGO_LLVM_COV_TARGET_DIR
+        maturin develop
+        pytest --ignore tests/integration --collect-only -qq # run this to ensure no weird imports that result in `Collector` errors
+        pytest --cov=daft --ignore tests/integration --durations=50
+        coverage combine -a --data-file='.coverage' || true
+        mkdir -p report-output
+        coverage xml -o ./report-output/coverage-${{ join(matrix.*, '-') }}.xml
+      env:
+        CARGO_TARGET_DIR: ./target
+
+        DAFT_RUNNER: ${{ matrix.daft-runner }}
+        DAFT_ENABLE_AQE: ${{ matrix.enable-aqe }}
+
+    - name: Build library and Test with pytest (macOS)
+      if: ${{ (runner.os == 'macOS') }}
+      run: |
+        source activate
         cargo llvm-cov clean --workspace
         maturin develop
         pytest --ignore tests/integration --collect-only -qq # run this to ensure no weird imports that result in `Collector` errors
@@ -127,24 +130,8 @@ jobs:
         DAFT_RUNNER: ${{ matrix.daft-runner }}
         DAFT_ENABLE_AQE: ${{ matrix.enable-aqe }}
 
-    - name: Build library and Test with pytest (Windows)
-      if: ${{ (runner.os == 'Windows') }}
-      run: |
-        .\venv\Scripts\activate
-        # source <(cargo llvm-cov show-env --export-prefix)
-        # export CARGO_TARGET_DIR=$CARGO_LLVM_COV_TARGET_DIR
-        # export CARGO_INCREMENTAL=1
-        # cargo llvm-cov clean --workspace
-        maturin develop
-        mkdir -p report-output && pytest --cov=daft --ignore tests\integration --durations=50
-        coverage combine -a --data-file='.coverage' || true
-        coverage xml -o .\report-output\coverage-${{ join(matrix.*, '-') }}.xml
-        # cargo llvm-cov --no-run --lcov --output-path report-output\rust-coverage-${{ join(matrix.*, '-') }}.lcov
-      env:
-        DAFT_RUNNER: ${{ matrix.daft-runner }}
-        DAFT_ENABLE_AQE: ${{ matrix.enable-aqe }}
-
     - name: Upload coverage report
+      if: ${{ (runner.os == 'macOS') }}
       uses: actions/upload-artifact@v4
       with:
         name: coverage-reports-unit-tests-${{ join(matrix.*, '-') }}
