--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,9 +17,8 @@ env:
   RUST_BACKTRACE: 1
 
 jobs:
-
-  unit-tests-with-coverage:
-    runs-on: ${{ matrix.os }}
+  unit-tests-without-coverage:
+    runs-on: ubuntu-latest
     timeout-minutes: 45
     strategy:
       fail-fast: false
@@ -27,7 +26,6 @@ jobs:
         python-version: ['3.9', '3.10']
         daft-runner: [py, ray, native]
         pyarrow-version: [8.0.0, 16.0.0]
-        os: [ubuntu-latest, macos-latest]
         enable-aqe: [1, 0]
         exclude:
         - daft-runner: py
@@ -36,15 +34,12 @@ jobs:
           enable-aqe: 1
         - daft-runner: ray
           pyarrow-version: 8.0.0
-          os: ubuntu-latest
         - daft-runner: py
           python-version: '3.10'
           pyarrow-version: 8.0.0
-          os: ubuntu-latest
         - daft-runner: native
           python-version: '3.10'
           pyarrow-version: 8.0.0
-          os: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - uses: moonrepo/setup-rust@v1
@@ -97,8 +92,88 @@ jobs:
         DAFT_RUNNER: ${{ matrix.daft-runner }}
         DAFT_ENABLE_AQE: ${{ matrix.enable-aqe }}
 
-    - name: Build library and Test with pytest (macOS)
-      if: ${{ (runner.os == 'macOS') }}
+    - name: Send Slack notification on failure
+      uses: slackapi/slack-github-action@v2.0.0
+      if: ${{ failure() && (github.ref == 'refs/heads/main') }}
+      with:
+        payload: |
+          {
+            "blocks": [
+              {
+                "type": "section",
+                "text": {
+                  "type": "mrkdwn",
+                  "text": ":rotating_light: [CI] Pytest Ubuntu Unit Tests <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|workflow> *FAILED on main* :rotating_light:"
+                }
+              }
+            ]
+          }
+        webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+        webhook-type: incoming-webhook
+
+  pr-unit-tests:
+    runs-on: ubuntu-latest
+    needs: unit-tests-without-coverage
+    if: always()
+    steps:
+    - name: All tests ok
+      if: ${{ !(contains(needs.*.result, 'failure')) }}
+      run: exit 0
+    - name: Some tests failed
+      if: ${{ contains(needs.*.result, 'failure') }}
+      run: exit 1
+
+  unit-tests-with-coverage:
+    runs-on: macos-latest
+    timeout-minutes: 90
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ['3.10']
+        daft-runner: [py, ray, native]
+        pyarrow-version: [16.0.0]
+        enable-aqe: [1, 0]
+        exclude:
+        - daft-runner: py
+          enable-aqe: 1
+        - daft-runner: native
+          enable-aqe: 1
+    steps:
+    - uses: actions/checkout@v4
+    - uses: moonrepo/setup-rust@v1
+      with:
+        cache: false
+    - uses: Swatinem/rust-cache@v2
+      with:
+        key: ${{ runner.os }}-build
+        cache-all-crates: 'true'
+    - name: Install cargo-llvm-cov
+      uses: taiki-e/install-action@cargo-llvm-cov
+
+    - name: install llvm tools
+      run: rustup component add llvm-tools-preview
+
+    - name: Install Python and uv
+      uses: astral-sh/setup-uv@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+        enable-cache: true
+        cache-dependency-glob: |
+          **/requirements-dev.txt
+          **/pyproject.toml
+
+    - name: Install dependencies
+      run: |
+        uv pip install -r requirements-dev.txt
+
+    - name: Override pyarrow
+      run: uv pip install pyarrow==${{ matrix.pyarrow-version }}
+
+    - name: Override deltalake for pyarrow
+      if: ${{ (matrix.pyarrow-version == '8.0.0') }}
+      run: uv pip install deltalake==0.10.0
+
+    - name: Build library and Test with pytest
       run: |
         cargo llvm-cov clean --workspace
         maturin develop
@@ -138,7 +213,7 @@ jobs:
                 "type": "section",
                 "text": {
                   "type": "mrkdwn",
-                  "text": ":rotating_light: [CI] Pytest Unit Tests <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|workflow> *FAILED on main* :rotating_light:"
+                  "text": ":rotating_light: [CI] Pytest macOS Unit Tests <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|workflow> *FAILED on main* :rotating_light:"
                 }
               }
             ]
@@ -146,7 +221,7 @@ jobs:
         webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
         webhook-type: incoming-webhook
 
-  unit-tests:
+  main-unit-tests:
     runs-on: ubuntu-latest
     needs: unit-tests-with-coverage
     if: always()
