--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,8 +17,8 @@ env:
   RUST_BACKTRACE: 1
 
 jobs:
-  unit-tests-without-coverage:
-    runs-on: ubuntu-latest
+  unit-tests:
+    runs-on: ${{ matrix.os }}
     timeout-minutes: 45
     strategy:
       fail-fast: false
@@ -27,6 +27,7 @@ jobs:
         daft-runner: [py, ray, native]
         pyarrow-version: [8.0.0, 16.0.0]
         enable-aqe: [1, 0]
+        os: [ubuntu-latest, macos-latest]
         exclude:
         - daft-runner: py
           enable-aqe: 1
@@ -40,6 +41,10 @@ jobs:
         - daft-runner: native
           python-version: '3.10'
           pyarrow-version: 8.0.0
+        - python-version: '3.9'
+          os: macos-latest
+        - pyarrow-version: 8.0.0
+          os: macos-latest
     steps:
     - uses: actions/checkout@v4
     - uses: moonrepo/setup-rust@v1
@@ -92,88 +97,8 @@ jobs:
         DAFT_RUNNER: ${{ matrix.daft-runner }}
         DAFT_ENABLE_AQE: ${{ matrix.enable-aqe }}
 
-    - name: Send Slack notification on failure
-      uses: slackapi/slack-github-action@v2.0.0
-      if: ${{ failure() && (github.ref == 'refs/heads/main') }}
-      with:
-        payload: |
-          {
-            "blocks": [
-              {
-                "type": "section",
-                "text": {
-                  "type": "mrkdwn",
-                  "text": ":rotating_light: [CI] Pytest Ubuntu Unit Tests <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|workflow> *FAILED on main* :rotating_light:"
-                }
-              }
-            ]
-          }
-        webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
-        webhook-type: incoming-webhook
-
-  pr-unit-tests:
-    runs-on: ubuntu-latest
-    needs: unit-tests-without-coverage
-    if: always()
-    steps:
-    - name: All tests ok
-      if: ${{ !(contains(needs.*.result, 'failure')) }}
-      run: exit 0
-    - name: Some tests failed
-      if: ${{ contains(needs.*.result, 'failure') }}
-      run: exit 1
-
-  unit-tests-with-coverage:
-    runs-on: macos-latest
-    timeout-minutes: 90
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ['3.10']
-        daft-runner: [py, ray, native]
-        pyarrow-version: [16.0.0]
-        enable-aqe: [1, 0]
-        exclude:
-        - daft-runner: py
-          enable-aqe: 1
-        - daft-runner: native
-          enable-aqe: 1
-    steps:
-    - uses: actions/checkout@v4
-    - uses: moonrepo/setup-rust@v1
-      with:
-        cache: false
-    - uses: Swatinem/rust-cache@v2
-      with:
-        key: ${{ runner.os }}-build
-        cache-all-crates: 'true'
-    - name: Install cargo-llvm-cov
-      uses: taiki-e/install-action@cargo-llvm-cov
-
-    - name: install llvm tools
-      run: rustup component add llvm-tools-preview
-
-    - name: Install Python and uv
-      uses: astral-sh/setup-uv@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-        enable-cache: true
-        cache-dependency-glob: |
-          **/requirements-dev.txt
-          **/pyproject.toml
-
-    - name: Install dependencies
-      run: |
-        uv pip install -r requirements-dev.txt
-
-    - name: Override pyarrow
-      run: uv pip install pyarrow==${{ matrix.pyarrow-version }}
-
-    - name: Override deltalake for pyarrow
-      if: ${{ (matrix.pyarrow-version == '8.0.0') }}
-      run: uv pip install deltalake==0.10.0
-
-    - name: Build library and Test with pytest
+    - name: Build library and Test with pytest with code coverage (macOS)
+      if: ${{ (runner.os == 'macOS') }}
       run: |
         cargo llvm-cov clean --workspace
         maturin develop
@@ -213,7 +138,7 @@ jobs:
                 "type": "section",
                 "text": {
                   "type": "mrkdwn",
-                  "text": ":rotating_light: [CI] Pytest macOS Unit Tests <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|workflow> *FAILED on main* :rotating_light:"
+                  "text": ":rotating_light: [CI] Pytest Unit Tests <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|workflow> *FAILED on main* :rotating_light:"
                 }
               }
             ]
@@ -221,9 +146,9 @@ jobs:
         webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
         webhook-type: incoming-webhook
 
-  main-unit-tests:
+  all-unit-tests:
     runs-on: ubuntu-latest
-    needs: unit-tests-with-coverage
+    needs: unit-tests
     if: always()
     steps:
     - name: All tests ok
@@ -904,7 +829,7 @@ jobs:
     name: Publish coverage reports to CodeCov
     runs-on: ubuntu-latest
     needs:
-    - unit-tests-with-coverage
+    - unit-tests
     - rust-tests-platform
     steps:
     - uses: actions/checkout@v4
