--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -51,14 +51,17 @@ jobs:
       # make html SPHINXOPTS="-W --keep-going -n"
       run: |
         source activate
-        maturin develop
-        cd docs/
-        make html SPHINXOPTS="-W --keep-going"
+        make docs
+      # run: |
+      #   source activate
+      #   maturin develop
+      #   cd docs/
+      #   make html SPHINXOPTS="-W --keep-going"
     - name: Upload built docs
       uses: actions/upload-artifact@v4
       with:
         name: html-docs
-        path: docs/build/html
+        path: site
   docpublish:
     runs-on: ubuntu-latest
     needs: docgen
