--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -52,7 +52,7 @@ jobs:
       run: |
         source activate
         maturin develop
-        make docs
+        mkdocs build
       # run: |
       #   source activate
       #   maturin develop
