feat: implements GlueCatalog with custom table registration (#4187)
## Changes Made

Adds a GlueCatalog implementation with custom tables and custom table
registration via a little patching. This is effectively Jay's comment
from last year.


https://github.com/Eventual-Inc/Daft/pull/1991#pullrequestreview-1925475853

Also I've taken a first stab a format discovery,

https://github.com/Eventual-Inc/Daft/pull/1991#discussion_r1518440432

## Related Issues

* https://github.com/Eventual-Inc/Daft/issues/2602
* https://github.com/Eventual-Inc/Daft/issues/1988
* https://github.com/Eventual-Inc/Daft/pull/1991

## Checklist

- [ ] Documented in API Docs (if applicable)
- [x] Documented in User Guide (if applicable)
- [x] If adding a new documentation page, doc is added to
`docs/mkdocs.yml` navigation
- [x] Documentation builds and is formatted properly (tag @/ccmao1130
for docs review)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,7 @@ nav:
     - SQL: integrations/sql.md
     - Hugging Face Datasets: integrations/huggingface.md
     - S3 Tables: integrations/s3tables.md
+    - Glue: integrations/glue.md
   - Resources:
     - Architecture: resources/architecture.md
     - DataFrame Comparison: resources/dataframe_comparison.md
