cast table markdown

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,6 +81,7 @@ theme:
   favicon: img/favicon.png
   font:
     text: Oxygen
+    code: Consolas
   features:
   - search.suggest
   - search.highlight
