--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,14 +14,10 @@ repos:
   hooks:
   - id: detect-private-key
   - id: trailing-whitespace
-    exclude: (?x)^(docs/source/api_docs/|tests/assets/mvp.csv|.*\.warc|tests/dataframe/test_show.py)$
+    exclude: (?x)^(tests/assets/mvp.csv|.*\.warc|tests/dataframe/test_show.py)$
   - id: end-of-file-fixer
     exclude: |
-      (?x)^(
-          docs/source/api_docs/|
-          docs/source/user_guide/fotw/data/|
-          .*\.warc
-      )$
+      (?x)^(.*\.warc)$
   - id: check-yaml
     exclude: kubernetes-ops
     args:
@@ -31,7 +27,6 @@ repos:
       (?x)^(
           tutorials/.*\.ipynb|
           docs/.*\.ipynb|
-          docs/source/user_guide/fotw/data/|
           .*\.jsonl
       )$
     args:
