--- a/Cargo.toml
+++ b/Cargo.toml
@@ -126,6 +126,10 @@ inherits = "release"
 lto = 'thin'
 strip = "none"  # dont strip
 
+[profile.release]
+strip = true
+panic = 'abort'
+
 [profile.release-lto]
 codegen-units = 1
 inherits = "release"
