--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -17,7 +17,6 @@ concurrency:
 jobs:
   docgen:
     runs-on: ubuntu-latest
-    continue-on-error: true
     env:
       python-version: '3.10'
     steps:
@@ -47,18 +46,15 @@ jobs:
         source venv/bin/activate
         uv pip install -r requirements-dev.txt
     - name: Build Daft in development mode and generate docs
-      # TODO: Break on any Sphinx warnings with nitpicks
-      # make html SPHINXOPTS="-W --keep-going -n"
       run: |
         source activate
         maturin develop
-        cd docs/
-        make html SPHINXOPTS="-W --keep-going"
+        mkdocs build
     - name: Upload built docs
       uses: actions/upload-artifact@v4
       with:
         name: html-docs
-        path: docs/build/html
+        path: site
   docpublish:
     runs-on: ubuntu-latest
     needs: docgen
@@ -70,7 +66,7 @@ jobs:
       success() &&
       (github.event.pull_request != null) &&
       (github.event.pull_request.head.repo.full_name == github.repository) &&
-      contains(github.event.pull_request.labels.*.name, 'documentation')
+      contains(github.event.pull_request.labels.*.name, 'docs')
     steps:
     - name: Download built HTML docs
       uses: actions/download-artifact@v4
